build: fix overflow on all portal page cards, make view subordinate result container scrollable, and format attendance page to be horizontal

--- a/MemberSystem/src/main/resources/static/portalPages/portalStyles.css
+++ b/MemberSystem/src/main/resources/static/portalPages/portalStyles.css
@@ -132,6 +132,7 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,.2);
     padding: 2vh;
+    
 }
 
 .dashboardItem:nth-child(1){ /*my account card*/
@@ -159,6 +160,7 @@
     grid-area: i4;
     display: flex;
     flex-direction: column;
+    height: fit-content;
 }
 
 /* .dashboardItem:nth-child(5){ /*my branch card
@@ -327,7 +329,7 @@
 }
 
 .sign-in{
-
+    padding: 30px;
     background: transparent;
 }
 .sign-in:hover{
@@ -397,8 +399,8 @@
     
         grid-template-areas:
         "i1"
-        "i2"
         "i3"
+        "i2"
         "i4";
     }
 }
@@ -511,6 +513,7 @@
     background: rgba(0, 0, 0, .05);
     grid-area: main-subordinate;
     padding: 20px;
+    overflow-y: scroll;
 }
 
 .content-subordinate-container{
@@ -615,13 +618,15 @@
 
 .user-info-container{
     background:white;
-    width: 80%;
+    width: auto;
     display: flex;
     flex-direction: column;
     padding: 20px;
-    gap: 50px;
+    gap: 5vh;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,.2);
+    width: max(350px, min(80%, 100%));
+    height: fit-content;
 }
 .user-extra-info{
     display: grid;
@@ -657,28 +662,10 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,.2);
 }
 
-.user-name-container{
+.user-info-subcontainer{
     display: flex;
     align-items: start;
     flex-direction: column;
-}
-
-.user-contact-container{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-}
-
-.user-supervisor-container{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-}
-
-.user-amnesty-days-container{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
 }
 
 .profile-edit{
@@ -729,7 +716,7 @@
 .user-contact{
     font-size: 35px;
     font-family: "source-sans-pro", sans-serif;   
-    width: 330px; 
+    width: 350px; 
 }
 
 .user-phone-number{
@@ -780,7 +767,7 @@
 .user-social-score{
     text-align: center;
     font-weight: 600;   
-}
+} 
 
 /*------------view ranks page-----------*/
 .main-view-rank{
@@ -984,8 +971,8 @@
 /*  ---------- myAttendance Page Start---------- */
 
 .myAttendance-body{
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -1007,17 +994,18 @@
     padding: 20px;
     height: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: flex-start;
-
+    overflow: scroll;
 }
 
 .body-calender{
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 10px;
+    gap: 30px;
+    width: fit-content;
+    height: 100%;
 }
 .arrow-button-portal{
     background: transparent;
